--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 CLIENT_ID= Client ID from the App Credentials section on the slack api website
 CLIENT_SECRET= Client Secret from the App Credentials section on the slack api website
 VERIFICATION_TOKEN= Verification Token from the App Credentials section on the slack api website
-PORT=8765
+PORT= A Port Of Your Choosing
 CLIENT_SIGNING_SECRET= Signing Secret from the App Credentials section on the slack api website
 BOT_TOKEN= Bot User OAuth Access Token from the OAuth Tokens & Redirect URLs page on the slack api website and is right under Tokens for Your Workspace, it should appear after installing the app into your workspace
